// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TypeScript initial state is unchanged > AccessibilityAppTS 1`] = `
<div>
  <div
    class="flex flex-col gap-3"
  >
    <nav
      class="flex gap-3"
    >
      <a
        class="flex-1 p-3 bg-blue-200 text-black hover:bg-blue-600 hover:text-white focus:bg-blue-600 focus:text-white"
      >
        Whale Tracker
      </a>
      <a
        class="flex-1 p-3 bg-blue-200 text-black hover:bg-blue-600 hover:text-white focus:bg-blue-600 focus:text-white"
      >
        Report a Sighting
      </a>
      <div
        class="relative flex flex-1"
      >
        <button
          class="flex justify-between flex-1 p-3 bg-blue-200 hover:bg-blue-600 hover:text-white focus:bg-blue-600 focus:text-white"
        >
          <span>
            Whalepedia
          </span>
          <span>
            ▼
          </span>
        </button>
      </div>
    </nav>
    <main
      class="shadow"
    >
      <div
        class="flex"
      >
        <button
          class="flex-1 p-3 bg-gray-300 hover:bg-gray-400 hover:text-white focus:bg-gray-400 focus:text-white cursor-pointer"
          role="link"
        >
          Table View
        </button>
        <button
          class="flex-1 p-3 bg-gray-100 hover:bg-gray-200 focus:bg-gray-200 cursor-pointer"
          role="link"
        >
          Sonar View
        </button>
      </div>
      <div
        class="p-3"
      >
        <table
          class="min-w-full"
        >
          <thead
            class="border-b bg-gray-300 sticky top-0"
          >
            <tr>
              <th />
              <th
                class="font-semibold py-2 px-3 text-left"
              >
                Name
              </th>
              <th
                class="font-semibold py-2 px-3 text-left"
              >
                Species
              </th>
              <th
                class="font-semibold py-2 px-3 text-left"
              >
                Location
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="border-b even:bg-gray-100"
            >
              <td
                class="py-2 px-3 text-2xl text-center"
              >
                🐳
              </td>
              <td
                class="py-2 px-3"
              >
                Whale 1
              </td>
              <td
                class="py-2 px-3"
              >
                <a
                  class="text-blue-600 hover:text-blue-900 focus:text-blue-900"
                >
                  Whale
                </a>
              </td>
              <td
                class="py-2 px-3"
              >
                (
                0
                , 
                0
                )
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </main>
  </div>
</div>
`;

exports[`TypeScript initial state is unchanged > ComplexStateAppTS 1`] = `
<div>
  <div
    class="flex justify-center gap-3"
  >
    <div
      class="flex flex-col gap-6"
    >
      <div
        class="shadow px-16 py-4 flex flex-col gap-3 items-center"
      >
        <h1
          class="font-semibold text-2xl"
        >
          Sonar readings for nearby whales
        </h1>
        <div
          class="flex flex-col"
        >
          <div
            class="text-center font-semibold"
          >
            Select sonar colour:
          </div>
          <div
            class="flex gap-6"
          >
            <label
              class="cursor-pointer"
            >
              <input
                checked=""
                type="radio"
              />
              <span
                class="m-2 align-middle"
              >
                Green
              </span>
            </label>
            <label
              class="cursor-pointer"
            >
              <input
                type="radio"
              />
              <span
                class="m-2 align-middle"
              >
                Blue/Pink
              </span>
            </label>
            <label
              class="cursor-pointer"
            >
              <input
                type="radio"
              />
              <span
                class="m-2 align-middle"
              >
                Red/Yellow
              </span>
            </label>
          </div>
        </div>
        <div
          style="filter: invert(48%) sepia(51%) saturate(1516%) hue-rotate(86deg) brightness(97%) contrast(96%);"
        >
          <div
            class="relative w-96 h-96 rounded-full overflow-hidden border-2"
          >
            <div
              class="absolute top-0 bottom-0 w-full h-full bg-slate-100 opacity-30"
            />
            <div
              class="absolute"
              style="left: 50%; top: 50%;"
            >
              <span>
                <span
                  class="cursor-pointer animate-pulse"
                  style="font-size: 2rem;"
                >
                  🐋
                </span>
              </span>
            </div>
          </div>
          <div
            class="absolute top-1/2 bottom-0 left-1/2 border-2 animate-[spin_4s_linear_infinite] origin-top-left"
          />
        </div>
      </div>
      <div
        class="shadow p-4 flex flex-col gap-3"
      >
        <div
          class="flex justify-around mt-3"
        >
          <div
            class="flex flex-col gap-3"
          >
            <button
              class="rounded w-12 h-12 bg-blue-600 hover:bg-blue-800 font-semibold text-white text-3xl"
            >
              +
            </button>
            <button
              class="rounded w-12 h-12 bg-blue-600 hover:bg-blue-800 font-semibold text-white text-3xl"
            >
              -
            </button>
          </div>
          <div
            class="flex justify-center items-center gap-3"
          >
            <button
              class="rounded w-12 h-12 bg-blue-600 hover:bg-blue-800 font-semibold text-white text-3xl"
            >
              ⇐
            </button>
            <div
              class="flex flex-col gap-3"
            >
              <button
                class="rounded w-12 h-12 bg-blue-600 hover:bg-blue-800 font-semibold text-white text-3xl"
              >
                ⇑
              </button>
              <button
                class="rounded w-12 h-12 bg-blue-600 hover:bg-blue-800 font-semibold text-white text-3xl"
              >
                ⇓
              </button>
            </div>
            <button
              class="rounded w-12 h-12 bg-blue-600 hover:bg-blue-800 font-semibold text-white text-3xl"
            >
              ⇒
            </button>
          </div>
        </div>
      </div>
      <div
        class="shadow p-4 flex flex-col gap-3"
      >
        <h2
          class="text-2xl font-semibold"
        >
          Whale 1
           the 
          Whale
        </h2>
        <div>
          Update location:
        </div>
        <div
          class="flex justify-between"
        >
          <label>
            X:
            <input
              class="w-48 ml-2"
              id="x"
              type="number"
              value="0"
            />
          </label>
          <label>
            Y:
            <input
              class="w-48 ml-2"
              id="y"
              type="number"
              value="0"
            />
             
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TypeScript initial state is unchanged > ComponentsAppTS 1`] = `
<div>
  <div
    class="flex flex-col gap-3 p-6 m-[-2.5rem]"
  >
    <h1
      class="text-2xl font-semibold"
    >
      Whale Weigh Platform
    </h1>
    <div
      class="flex gap-3 items-center mb-4"
    >
      <div
        class="flex gap-3 justify-end"
      >
        <input
          class="border-2 border-gray-300 rounded-none px-2 py-1 h-10"
          placeholder="Search..."
          type="text"
        />
      </div>
    </div>
    <div
      class="flex justify-between gap-3"
    >
      <div
        class="basis-6/12"
      >
        <h2
          class="text-2xl font-semibold mb-2"
        >
          List of whales
        </h2>
        <table
          class="min-w-full"
        >
          <thead
            class="border-b bg-gray-300 sticky top-0"
          >
            <tr>
              <th
                class="w-36 grow-0 font-semibold py-2 px-3 text-center"
              >
                Profile picture
              </th>
              <th
                class="font-semibold py-2 px-3 text-left"
              >
                Name
              </th>
              <th
                class="font-semibold py-2 px-3 text-right"
              >
                Weight
              </th>
              <th
                class="font-semibold py-2 px-3 text-xl text-center"
              >
                🦷
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="border-b even:bg-gray-100"
            >
              <td
                class="py-2 px-3 text-4xl text-center"
              >
                🐳
              </td>
              <td
                class="py-2 px-3 flex justify-between items-baseline"
              >
                Whale 1 the Whale
              </td>
              <td
                class="py-2 px-3 text-right"
              >
                1000
              </td>
              <td
                class="py-2 px-3 text-xl text-center"
              >
                ❌
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="basis-6/12"
      >
        <h2
          class="text-2xl font-semibold mb-2"
        >
          List of fish
        </h2>
        <table
          class="min-w-full"
        >
          <thead
            class="border-b bg-gray-300 sticky top-0"
          >
            <tr>
              <th
                class="w-36 grow-0 font-semibold py-2 px-3 text-center"
              >
                Profile picture
              </th>
              <th
                class="font-semibold py-2 px-3 text-left"
              >
                Name
              </th>
              <th
                class="w-36 grow-0 font-semibold py-2 px-3 text-center"
              >
                Is Saltwater?
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="border-b even:bg-gray-100"
            >
              <td
                class="py-2 px-3 text-4xl text-center"
              >
                🐠
              </td>
              <td
                class="py-2 px-3 flex justify-between items-baseline"
              >
                Whale 1 the Whale
              </td>
              <td
                class="py-2 px-3 text-4xl text-center"
              >
                🏞️
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`TypeScript initial state is unchanged > DeferredUpdatesAppTS 1`] = `
<div>
  <div
    class="flex flex-col gap-3 p-6 m-[-2.5rem]"
  >
    <h1
      class="text-2xl font-semibold"
    >
      Whale Weigh Platform
    </h1>
    <div
      class="flex gap-3 items-center mb-4"
    >
      <div
        class="flex gap-3 justify-end"
      >
        <input
          class="border-2 border-gray-300 rounded-none px-2 py-1 h-10 cursor-pointer"
          id="search"
          placeholder="Search..."
          type="text"
          value=""
        />
        <label
          class="cursor-pointer text-3xl"
          for="search"
        >
          🔎
        </label>
      </div>
    </div>
    <div
      class="flex justify-between gap-3"
    >
      <div
        class="w-2/3 "
      >
        <div
          class="w-full"
        >
          <div
            class="flex justify-between"
          >
            <h2
              class="text-2xl font-semibold mb-2"
            >
              List of whales
            </h2>
            <label
              class="flex text-xl font-semibold cursor-pointer items-baseline"
            >
              <input
                class="m-3 cursor-pointer"
                name="hideDolphins"
                type="checkbox"
              />
              Hide dolphins?
            </label>
          </div>
          <table
            class="min-w-full"
          >
            <thead
              class="border-b bg-gray-300 sticky top-0"
            >
              <tr>
                <th
                  class="w-36 grow-0 font-semibold py-2 px-3 text-center"
                >
                  Profile picture
                </th>
                <th
                  class="font-semibold py-2 px-3 text-left"
                >
                  Name
                </th>
                <th
                  class="font-semibold py-2 px-3 text-right"
                >
                  Weight
                </th>
                <th
                  class="font-semibold py-2 px-3 text-xl text-center"
                >
                  🦷
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="border-b even:bg-gray-100"
              >
                <td
                  class="py-2 px-3 text-4xl text-center"
                >
                  🐳
                </td>
                <td
                  class="py-2 px-3 flex justify-between items-baseline"
                >
                  Whale 1 the Whale
                </td>
                <td
                  class="py-2 px-3 text-right"
                >
                  1000
                </td>
                <td
                  class="py-2 px-3 text-xl text-center"
                >
                  ❌
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TypeScript initial state is unchanged > EffectsAppTS 1`] = `
<div>
  <div
    class="flex justify-center"
  >
    <div
      class="flex flex-col gap-6"
    >
      <div
        class="shadow px-16 py-4 flex-1 flex flex-col gap-3 items-center justify-around"
        tabindex="0"
      >
        <h1
          class="font-semibold text-2xl"
        >
          Sonar readings for nearby whales
        </h1>
        <div
          style="filter: invert(48%) sepia(51%) saturate(1516%) hue-rotate(86deg) brightness(97%) contrast(96%);"
        >
          <div
            class="relative rounded-full overflow-hidden border-2"
            style="width: 368px; height: 368px;"
          >
            <div
              class="absolute top-0 bottom-0 w-full h-full bg-slate-100 opacity-30"
            />
            <div
              class="absolute"
              style="left: 50%; top: 50%;"
            >
              <span>
                <span
                  style="font-size: 2rem;"
                >
                  🐋
                </span>
              </span>
            </div>
          </div>
          <div
            class="absolute top-1/2 bottom-0 left-1/2 border-2 animate-[spin_4s_linear_infinite] origin-top-left"
          />
        </div>
      </div>
      <div
        class="shadow p-4 flex-1 flex flex-col gap-3"
      >
        <div
          class="flex justify-around"
        >
          <div
            class="flex flex-col gap-3"
          >
            <button
              class="rounded w-12 h-12 bg-blue-600 hover:bg-blue-800 font-semibold text-white text-3xl"
            >
              +
            </button>
            <button
              class="rounded w-12 h-12 bg-blue-600 hover:bg-blue-800 font-semibold text-white text-3xl"
            >
              -
            </button>
          </div>
          <div
            class="flex justify-center items-center gap-3"
          >
            <button
              class="rounded w-12 h-12 bg-blue-600 hover:bg-blue-800 font-semibold text-white text-3xl"
            >
              ⇐
            </button>
            <div
              class="flex flex-col gap-3"
            >
              <button
                class="rounded w-12 h-12 bg-blue-600 hover:bg-blue-800 font-semibold text-white text-3xl"
              >
                ⇑
              </button>
              <button
                class="rounded w-12 h-12 bg-blue-600 hover:bg-blue-800 font-semibold text-white text-3xl"
              >
                ⇓
              </button>
            </div>
            <button
              class="rounded w-12 h-12 bg-blue-600 hover:bg-blue-800 font-semibold text-white text-3xl"
            >
              ⇒
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TypeScript initial state is unchanged > ErrorsAppTS 1`] = `
<div>
  <div
    class="flex flex-col gap-3"
  >
    <h1
      class="text-2xl font-semibold"
    >
      Whale Location Service
    </h1>
    <div
      class="flex gap-3 space-around"
    >
      <button
        class="p-3 bg-blue-600 hover:bg-blue-800 text-white flex-1"
      >
        Fetch Good Data
      </button>
      <button
        class="p-3 bg-blue-600 hover:bg-blue-800 text-white flex-1"
      >
        Fetch Bad Data
      </button>
      <button
        class="p-3 bg-blue-600 hover:bg-blue-800 text-white flex-1"
      >
        Fetch Invalid JSON
      </button>
      <button
        class="p-3 bg-blue-600 hover:bg-blue-800 text-white flex-1"
      >
        Fetch Over Bad Connection
      </button>
    </div>
    <div
      class="shadow"
    >
      <div
        class="flex"
      >
        <a
          class="flex-1 p-3 bg-gray-300 cursor-pointer"
        >
          Table View
        </a>
        <a
          class="flex-1 p-3 bg-gray-100 cursor-pointer"
        >
          Sonar View
        </a>
      </div>
      <div
        class="p-3"
      >
        <table
          class="min-w-full"
        >
          <thead
            class="border-b bg-gray-300 sticky top-0"
          >
            <tr>
              <th />
              <th
                class="font-semibold py-2 px-3 text-left"
              >
                Name
              </th>
              <th
                class="font-semibold py-2 px-3 text-left"
              >
                Species
              </th>
              <th
                class="font-semibold py-2 px-3 text-left"
              >
                Location
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="border-b even:bg-gray-100"
            >
              <td
                class="py-2 px-3 text-2xl text-center"
              >
                🐳
              </td>
              <td
                class="py-2 px-3"
              >
                Whale 1
              </td>
              <td
                class="py-2 px-3"
              >
                Whale
              </td>
              <td
                class="py-2 px-3"
              >
                (
                0
                , 
                0
                )
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`TypeScript initial state is unchanged > FormsAppTS 1`] = `
<div>
  <div
    class="flex flex-col gap-4"
  >
    <div
      class="flex flex-col gap-6"
    >
      <h1
        class="font-semibold text-2xl"
      >
        Whaven Holidays
      </h1>
      <p
        class="italics"
      >
        Welcome to Whaven Holidays, where the magic of the sea meets the joy of unforgettable getaways. Immerse yourself in a world of seaside bliss as we tailor your dream holiday experience. Discover breathtaking destinations, from charming coastal retreats to luxurious beachfront escapes. Dive into a sea of activities, including thrilling whale watching, serene snorkelling, and lively beach volleyball. Your preferences shape the journey, from accommodation with mesmerizing ocean views to personalized activities for every member of your group. Whaven Holidays is not just a vacation; it's a tailor-made adventure crafted just for you. Let the waves of excitement begin!
      </p>
    </div>
    <form
      class="flex flex-col gap-4"
    >
      <div
        class="flex gap-3 items-center"
      >
        <progress
          class="flex-1 color-white"
          max="3"
          value="0"
        />
        <button
          class="min-w-32 bg-blue-500 hover:bg-blue-700 disabled:bg-gray-300 text-white font-bold py-2 px-4 rounded whitespace-nowrap"
          disabled=""
          type="button"
        >
          Previous
        </button>
        <button
          class="min-w-32 bg-blue-500 hover:bg-blue-700 disabled:bg-gray-300 text-white font-bold py-2 px-4 rounded whitespace-nowrap"
          type="button"
        >
          Next
        </button>
      </div>
      <div
        class=""
      >
        <fieldset
          class="flex flex-col gap-4"
        >
          <legend
            class="text-2xl font-semibold mb-6"
          >
            Personal Details
          </legend>
          <div
            class="flex-1 flex flex-col gap-2"
          >
            <label
              class="font-semibold cursor-pointer"
              for="fullName"
            >
              Full Name
            </label>
            <input
              id="fullName"
              required=""
              type="text"
              value="Ada the Skiller Whale"
            />
          </div>
          <div
            class="flex gap-4"
          >
            <div
              class="flex-1 flex flex-col gap-2"
            >
              <label
                class="font-semibold cursor-pointer"
                for="email"
              >
                Email
              </label>
              <input
                id="email"
                required=""
                type="email"
                value="ada@skillerwhale.com"
              />
            </div>
            <div
              class="flex-1 flex flex-col gap-2"
            >
              <label
                class="font-semibold cursor-pointer"
                for="phoneNumber"
              >
                Phone Number
              </label>
              <input
                id="phoneNumber"
                type="tel"
                value=""
              />
            </div>
          </div>
          <div
            class="flex-1 flex flex-col gap-2"
          >
            <label
              class="font-semibold"
              for="address"
            >
              Address
            </label>
            <textarea
              id="address"
              rows="4"
            >
              The Sea
            </textarea>
          </div>
          <div
            class="flex gap-4"
          >
            <div
              class="flex-1 flex flex-col gap-2"
            >
              <label
                class="font-semibold cursor-pointer"
                for="numberOfAdults"
              >
                Number of Adults
              </label>
              <input
                id="numberOfAdults"
                min="1"
                required=""
                type="number"
                value="1"
              />
            </div>
            <div
              class="flex-1 flex flex-col gap-2"
            >
              <label
                class="font-semibold cursor-pointer"
                for="numberOfChildren"
              >
                Number of Children
              </label>
              <input
                id="numberOfChildren"
                min="0"
                required=""
                type="number"
                value="0"
              />
            </div>
          </div>
        </fieldset>
      </div>
      <div
        class="hidden"
      >
        <fieldset
          class="flex flex-col gap-4"
        >
          <legend
            class="text-2xl font-semibold mb-6"
          >
            Destination and Dates
          </legend>
          <div
            class="flex-1 flex flex-col gap-2"
          >
            <label
              class="font-semibold cursor-pointer"
              for="location"
            >
              Location
            </label>
            <select
              id="location"
              required=""
            >
              <option
                value="capeCod"
              >
                Cape Cod
              </option>
              <option
                value="carpenhagen"
              >
                Carpenhagen
              </option>
              <option
                value="charborough"
              >
                Charborough
              </option>
              <option
                value="clamsterdam"
              >
                Clamsterdam
              </option>
              <option
                value="coralifornia"
              >
                Coralifornia
              </option>
              <option
                value="costaDelSole"
              >
                Costa Del Sole
              </option>
              <option
                value="fishStockHolm"
              >
                Fish Stock Holm
              </option>
              <option
                value="theMaldeels"
              >
                The Maldeels
              </option>
              <option
                value="salmonaco"
              >
                Salmonaco
              </option>
              <option
                value="squidney"
              >
                Squidney
              </option>
              <option
                value="whales"
              >
                Whales
              </option>
            </select>
          </div>
          <div
            class="flex-1 flex flex-col gap-2"
          >
            <label
              class="font-semibold cursor-pointer"
              for="accommodation"
            >
              Accommodation
            </label>
            <select
              id="accommodation"
              required=""
            >
              <option
                value="beachHouse"
              >
                Beach House
              </option>
              <option
                value="bedAndBreakfast"
              >
                Bed And Breakfast
              </option>
              <option
                value="campSite"
              >
                Camp Site
              </option>
              <option
                value="hotel"
              >
                Hotel
              </option>
            </select>
          </div>
          <div
            class="flex gap-4"
          >
            <div
              class="flex-1 flex flex-col gap-2"
            >
              <label
                class="font-semibold cursor-pointer"
                for="checkIn"
              >
                Check In
              </label>
              <input
                id="checkIn"
                required=""
                type="date"
                value="2022-02-05"
              />
            </div>
            <div
              class="flex-1 flex flex-col gap-2"
            >
              <label
                class="font-semibold cursor-pointer"
                for="checkOut"
              >
                Check Out
              </label>
              <input
                id="checkOut"
                required=""
                type="date"
                value="2022-02-12"
              />
            </div>
          </div>
          <label
            class="flex-1 flex gap-2 items-center border border-slate-800 px-3 py-2 font-semibold cursor-pointer"
            for="flexibleOnDates"
          >
            <input
              class="flex-none"
              id="flexibleOnDates"
              type="checkbox"
            />
            Flexible on Dates
          </label>
        </fieldset>
      </div>
      <div
        class="hidden"
      >
        <fieldset
          class="flex flex-col gap-4"
        >
          <legend
            class="text-2xl font-semibold mb-6"
          >
            Preferred Activities
          </legend>
          <label
            class="flex-1 flex gap-2 items-center border border-slate-800 px-3 py-2 font-semibold cursor-pointer"
            for="whaleWatching"
          >
            <input
              class="flex-none"
              id="whaleWatching"
              type="checkbox"
            />
            Whale Watching
          </label>
          <label
            class="flex-1 flex gap-2 items-center border border-slate-800 px-3 py-2 font-semibold cursor-pointer"
            for="snorkelling"
          >
            <input
              class="flex-none"
              id="snorkelling"
              type="checkbox"
            />
            Snorkelling
          </label>
          <label
            class="flex-1 flex gap-2 items-center border border-slate-800 px-3 py-2 font-semibold cursor-pointer"
            for="beachVolleyball"
          >
            <input
              class="flex-none"
              id="beachVolleyball"
              type="checkbox"
            />
            Beach Volleyball
          </label>
          <label
            class="flex-1 flex gap-2 items-center border border-slate-800 px-3 py-2 font-semibold cursor-pointer"
            for="kayaking"
          >
            <input
              class="flex-none"
              id="kayaking"
              type="checkbox"
            />
            Kayaking
          </label>
          <label
            class="flex-1 flex gap-2 items-center border border-slate-800 px-3 py-2 font-semibold cursor-pointer"
            for="sandcastleBuilding"
          >
            <input
              class="flex-none"
              id="sandcastleBuilding"
              type="checkbox"
            />
            Sandcastle Building
          </label>
          <label
            class="flex-1 flex gap-2 items-center border border-slate-800 px-3 py-2 font-semibold cursor-pointer"
            for="coastalHikes"
          >
            <input
              class="flex-none"
              id="coastalHikes"
              type="checkbox"
            />
            Coastal Hikes
          </label>
          <label
            class="flex-1 flex gap-2 items-center border border-slate-800 px-3 py-2 font-semibold cursor-pointer"
            for="dolphinCruises"
          >
            <input
              class="flex-none"
              id="dolphinCruises"
              type="checkbox"
            />
            Dolphin Cruises
          </label>
          <label
            class="flex-1 flex gap-2 items-center border border-slate-800 px-3 py-2 font-semibold cursor-pointer"
            for="underwaterPhotography"
          >
            <input
              class="flex-none"
              id="underwaterPhotography"
              type="checkbox"
            />
            Underwater Photography
          </label>
          <label
            class="flex-1 flex gap-2 items-center border border-slate-800 px-3 py-2 font-semibold cursor-pointer"
            for="seasideYoga"
          >
            <input
              class="flex-none"
              id="seasideYoga"
              type="checkbox"
            />
            Seaside Yoga
          </label>
          <label
            class="flex-1 flex gap-2 items-center border border-slate-800 px-3 py-2 font-semibold cursor-pointer"
            for="surfingLessons"
          >
            <input
              class="flex-none"
              id="surfingLessons"
              type="checkbox"
            />
            Surfing Lessons
          </label>
        </fieldset>
      </div>
      <div
        class="hidden"
      >
        <h1
          class="text-3xl font-semibold"
        >
          Confirmation
        </h1>
        <div
          class="flex gap-4"
        >
          <div
            class="flex-1 flex flex-col gap-3"
          >
            <h2
              class="text-2xl font-semibold"
            >
              Personal Details
            </h2>
            <p>
              Full Name: 
              Ada the Skiller Whale
            </p>
            <p>
              Email: 
              ada@skillerwhale.com
            </p>
            <p>
              Phone Number:
               
              none
            </p>
            <p>
              Address:
               
              The Sea
            </p>
            <p>
              Number of Adults: 
              1
            </p>
            <p>
              Number of Children: 
              0
            </p>
            <h2
              class="text-2xl font-semibold"
            >
              Destination and Dates
            </h2>
            <p>
              Location: 
            </p>
            <p>
              Accommodation:
               
            </p>
            <p>
              Dates: 
              2022-02-05
               to
               
              2022-02-12
            </p>
            <p>
              Flexible on Dates:
               
              No
            </p>
          </div>
          <div
            class="flex-1 flex flex-col gap-3"
          >
            <h2
              class="text-2xl font-semibold"
            >
              Preferred Activities
            </h2>
            <ul>
              <li>
                None
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="hidden"
      >
        <p
          class="text-4xl text-green-600 mt-32"
        >
          Thanks! We'll be in touch with your holiday options soon.
        </p>
        <button
          class="min-w-32 bg-blue-500 hover:bg-blue-700 disabled:bg-gray-300 text-white font-bold py-2 px-4 rounded whitespace-nowrap"
          type="reset"
        >
          Make Another Enquiry
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`TypeScript initial state is unchanged > IntroductionAppTS 1`] = `
<div>
  <div
    class="flex flex-col gap-6"
  >
    <h1
      class="text-2xl font-semibold"
    >
      Whale Location Service
    </h1>
    <div
      class="shadow"
    >
      <div
        class="flex"
      />
      <div
        class="p-3"
      >
        <table
          class="min-w-full"
        >
          <thead
            class="border-b bg-gray-300 sticky top-0"
          >
            <tr>
              <th />
              <th
                class="font-semibold py-2 px-3 text-left"
              >
                Name
              </th>
              <th
                class="font-semibold py-2 px-3 text-left"
              >
                Species
              </th>
              <th
                class="font-semibold py-2 px-3 text-left"
              >
                Location
              </th>
            </tr>
          </thead>
          <tbody />
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`TypeScript initial state is unchanged > RefsAppTS 1`] = `
<div>
  <div
    class="flex flex-col gap-6"
  >
    <dialog
      class="shadow-lg w-1/2"
    />
    <h1
      class="text-2xl font-semibold"
    >
      Whale Weigh Platform
    </h1>
    <div
      class="flex gap-3 max-h-96 p-3 bg-slate-100"
    >
      <div
        class="overflow-auto flex flex-col gap-1"
      >
        <div
          class="flex flex-col gap-3 p-3 bg-white"
        >
          <div
            class="flex justify-between items-baseline"
          >
            <h3
              class="text-lg font-semibold"
            >
              Whale 1
            </h3>
            <div
              class="flex gap-3 items-baseline"
            >
              <label>
                Weight
              </label>
              <input
                type="number"
                value="1000"
              />
              <button
                class="bg-sky-700 text-white p-2 hover:bg-sky-900"
              >
                pop out
              </button>
            </div>
          </div>
          <p>
            Whale 1
          </p>
        </div>
      </div>
      <div
        class="flex flex-col gap-3 justify-between"
      >
        <div
          class="flex-1 flex flex-col justify-between p-3 bg-slate-400"
        >
          <h2
            class="text-lg font-semibold"
          >
            Rename Whales
          </h2>
          <ul
            class="flex flex-col gap-2"
          >
            <li>
              <input
                class="border-0"
                type="text"
                value="Whale 1"
              />
            </li>
          </ul>
        </div>
        <button
          class="bg-blue-500 text-white p-2 hover:bg-sky-700"
        >
          Scroll to top of list
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`TypeScript initial state is unchanged > RenderingCycleAppTS 1`] = `
<div>
  <div
    class="flex flex-col gap-6"
  >
    <h1
      class="text-2xl font-semibold"
    >
      Whale Location Service
    </h1>
    <div
      class="flex flex-col gap-3 p-3 shadow-md bg-blue-100"
    >
      <form
        class="flex flex-col gap-2"
      >
        <div
          class="flex gap-3 justify-between items-baseline"
        >
          <h2
            class="text-lg font-semibold"
          >
            Report a Whale Sighting
          </h2>
          <select
            name="species"
          >
            <option
              value="Blue Whale"
            >
              Blue Whale
            </option>
            <option
              value="Fin Whale"
            >
              Fin Whale
            </option>
            <option
              value="Sei Whale"
            >
              Sei Whale
            </option>
            <option
              value="Sperm Whale"
            >
              Sperm Whale
            </option>
            <option
              value="Humpback whale"
            >
              Humpback whale
            </option>
            <option
              value="Long-Beaked Common Dolphin"
            >
              Long-Beaked Common Dolphin
            </option>
            <option
              value="Short-Beaked Common Dolphin"
            >
              Short-Beaked Common Dolphin
            </option>
            <option
              value="Bottlenose Dolphin"
            >
              Bottlenose Dolphin
            </option>
            <option
              value="Indo-Pacific Bottlenose Dolphin"
            >
              Indo-Pacific Bottlenose Dolphin
            </option>
          </select>
        </div>
        <div
          class="flex gap-3"
        >
          <input
            class="flex-1"
            name="name"
            placeholder="name"
            type="text"
          />
          <input
            class="flex-1"
            name="x"
            placeholder="x-coordinate"
            type="number"
            value="0"
          />
          <input
            class="flex-1"
            name="y"
            placeholder="y-coordinate"
            type="number"
            value="0"
          />
        </div>
        <div
          class="flex gap-3 justify-end"
        >
          <button
            class="py-2 px-3 text-white bg-blue-600 hover:bg-blue-800 disabled:bg-gray-500 disabled:cursor-not-allowed"
          >
            Report Sighting
          </button>
        </div>
      </form>
    </div>
    <div
      class="flex flex-col gap-3 p-3 shadow-md"
    >
      <h2
        class="text-lg font-semibold"
      >
        Recent Sightings
      </h2>
      <table
        class="min-w-full"
      >
        <thead
          class="border-b bg-gray-300 sticky top-0"
        >
          <tr>
            <th />
            <th
              class="font-semibold py-2 px-3 text-left"
            >
              Name
            </th>
            <th
              class="font-semibold py-2 px-3 text-left"
            >
              Species
            </th>
            <th
              class="font-semibold py-2 px-3 text-left"
            >
              Location
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="border-b even:bg-gray-100"
          >
            <td
              class="py-2 px-3 text-3xl text-center"
            >
              🐳
            </td>
            <td
              class="py-2 px-3"
            >
              Whale 1
            </td>
            <td
              class="py-2 px-3"
            >
              Whale
            </td>
            <td
              class="py-2 px-3"
            >
              (
              0
              , 
              0
              )
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`TypeScript initial state is unchanged > StateAppTS 1`] = `
<div>
  <div
    class="flex justify-center"
  >
    <div
      class="flex flex-col gap-6"
    >
      <div
        class="shadow px-16 py-4 flex flex-col gap-3 items-center"
      >
        <h1
          class="font-semibold text-2xl"
        >
          Sonar readings for nearby whales
        </h1>
        <div
          class="flex flex-col"
        >
          <div
            class="text-center font-semibold"
          >
            Select sonar colour:
          </div>
          <div
            class="flex gap-6"
          >
            <label
              class="cursor-pointer"
            >
              <input
                checked=""
                name="color"
                type="radio"
              />
              <span
                class="m-2 align-middle"
              >
                Green
              </span>
            </label>
            <label
              class="cursor-pointer"
            >
              <input
                name="color"
                type="radio"
              />
              <span
                class="m-2 align-middle"
              >
                Blue/Pink
              </span>
            </label>
            <label
              class="cursor-pointer"
            >
              <input
                name="color"
                type="radio"
              />
              <span
                class="m-2 align-middle"
              >
                Red/Yellow
              </span>
            </label>
          </div>
        </div>
        <div
          style="filter: invert(48%) sepia(51%) saturate(1516%) hue-rotate(86deg) brightness(97%) contrast(96%);"
        >
          <div
            class="relative w-96 h-96 rounded-full overflow-hidden border-2"
          >
            <div
              class="absolute top-0 bottom-0 w-full h-full bg-slate-100 opacity-30"
            />
            <div
              class="absolute"
              style="left: 50%; top: 50%;"
            >
              <span>
                <span
                  class="cursor-pointer animate-pulse"
                  style="font-size: 2rem;"
                >
                  🐋
                </span>
              </span>
            </div>
          </div>
          <div
            class="absolute top-1/2 bottom-0 left-1/2 border-2 animate-[spin_4s_linear_infinite] origin-top-left"
          />
        </div>
      </div>
      <div
        class="shadow p-4 flex flex-col gap-3"
      >
        <div
          class="flex justify-around mt-3"
        >
          <div
            class="flex flex-col gap-3"
          >
            <button
              class="rounded w-12 h-12 bg-blue-600 hover:bg-blue-800 font-semibold text-white text-3xl"
            >
              +
            </button>
            <button
              class="rounded w-12 h-12 bg-blue-600 hover:bg-blue-800 font-semibold text-white text-3xl"
            >
              -
            </button>
          </div>
          <div
            class="flex justify-center items-center gap-3"
          >
            <button
              class="rounded w-12 h-12 bg-blue-600 hover:bg-blue-800 font-semibold text-white text-3xl"
            >
              ⇐
            </button>
            <div
              class="flex flex-col gap-3"
            >
              <button
                class="rounded w-12 h-12 bg-blue-600 hover:bg-blue-800 font-semibold text-white text-3xl"
              >
                ⇑
              </button>
              <button
                class="rounded w-12 h-12 bg-blue-600 hover:bg-blue-800 font-semibold text-white text-3xl"
              >
                ⇓
              </button>
            </div>
            <button
              class="rounded w-12 h-12 bg-blue-600 hover:bg-blue-800 font-semibold text-white text-3xl"
            >
              ⇒
            </button>
          </div>
        </div>
      </div>
      <div
        class="shadow p-4 flex flex-col gap-3"
      >
        <h2
          class="text-2xl font-semibold"
        >
          Whale 1
           the 
          Whale
        </h2>
        <div>
          Update location:
        </div>
        <div
          class="flex justify-between"
        >
          <label>
            X:
            <input
              class="w-48 ml-2"
              id="x"
              type="number"
              value="0"
            />
          </label>
          <label>
            Y:
            <input
              class="w-48 ml-2"
              id="y"
              type="number"
              value="0"
            />
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;
